--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,7 +14,6 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"],
-    "baseUrl": "/secrets"
+    "types": ["node"]
   }
 }
